// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render BigMovieCard with form review 1`] = `
<section
  className="movie-card movie-card--full"
>
  <div
    className="movie-card__header"
  >
    <MovieCardHead
      film={
        Object {
          "backgroundColor": "#ffffff",
          "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
          "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
          "director": "Wes Andreson",
          "genre": "Comedy",
          "id": 1,
          "isFavorite": false,
          "name": "The Grand Budapest Hotel",
          "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
          "previewImage": "img/the-grand-budapest-hotel.jpg",
          "previewVideoLink": "https://some-link",
          "rating": 8.9,
          "released": 2014,
          "runTime": 99,
          "scoresCount": 240,
          "starring": Array [
            "Bill Murray",
            "Edward Norton",
            "Jude Law",
            "Willem Dafoe",
            "Saoirse Ronan",
          ],
          "videoLink": "https://some-link",
        }
      }
      headerNav={true}
    />
    <MovieCardPoster
      classname="small"
      film={
        Object {
          "backgroundColor": "#ffffff",
          "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
          "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
          "director": "Wes Andreson",
          "genre": "Comedy",
          "id": 1,
          "isFavorite": false,
          "name": "The Grand Budapest Hotel",
          "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
          "previewImage": "img/the-grand-budapest-hotel.jpg",
          "previewVideoLink": "https://some-link",
          "rating": 8.9,
          "released": 2014,
          "runTime": 99,
          "scoresCount": 240,
          "starring": Array [
            "Bill Murray",
            "Edward Norton",
            "Jude Law",
            "Willem Dafoe",
            "Saoirse Ronan",
          ],
          "videoLink": "https://some-link",
        }
      }
    />
  </div>
  <div
    className="add-review"
  >
    <FormAddReview
      checkValid={[Function]}
      commentValid={true}
      email=""
      emailValid={true}
      filmId={1}
      formErrors={
        Object {
          "email": "",
          "password": "",
          "textReview": "",
        }
      }
      formValid={false}
      handleFieldChange={[Function]}
      handleSubmit={[Function]}
      password=""
      passwordValid={true}
      rating="3"
      textReview=""
    />
  </div>
</section>
`;

exports[`Render BigMovieCard with full content 1`] = `
<section
  className="movie-card movie-card--full"
>
  <div
    className="movie-card__header"
  >
    <MovieCardHead
      film={
        Object {
          "backgroundColor": "#ffffff",
          "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
          "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
          "director": "Wes Andreson",
          "genre": "Comedy",
          "id": 1,
          "isFavorite": false,
          "name": "The Grand Budapest Hotel",
          "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
          "previewImage": "img/the-grand-budapest-hotel.jpg",
          "previewVideoLink": "https://some-link",
          "rating": 8.9,
          "released": 2014,
          "runTime": 99,
          "scoresCount": 240,
          "starring": Array [
            "Bill Murray",
            "Edward Norton",
            "Jude Law",
            "Willem Dafoe",
            "Saoirse Ronan",
          ],
          "videoLink": "https://some-link",
        }
      }
      headerNav={true}
    />
    <MovieCardPoster
      classname="small"
      film={
        Object {
          "backgroundColor": "#ffffff",
          "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
          "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
          "director": "Wes Andreson",
          "genre": "Comedy",
          "id": 1,
          "isFavorite": false,
          "name": "The Grand Budapest Hotel",
          "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
          "previewImage": "img/the-grand-budapest-hotel.jpg",
          "previewVideoLink": "https://some-link",
          "rating": 8.9,
          "released": 2014,
          "runTime": 99,
          "scoresCount": 240,
          "starring": Array [
            "Bill Murray",
            "Edward Norton",
            "Jude Law",
            "Willem Dafoe",
            "Saoirse Ronan",
          ],
          "videoLink": "https://some-link",
        }
      }
    />
  </div>
  <div
    className="add-review"
  >
    <FormAddReview
      checkValid={[Function]}
      commentValid={true}
      email=""
      emailValid={true}
      filmId={1}
      formErrors={
        Object {
          "email": "",
          "password": "",
          "textReview": "",
        }
      }
      formValid={false}
      handleFieldChange={[Function]}
      handleSubmit={[Function]}
      password=""
      passwordValid={true}
      rating="3"
      textReview=""
    />
  </div>
</section>
`;

exports[`Render BigMovieCard without form review 1`] = `
<section
  className="movie-card movie-card--full"
>
  <div
    className="movie-card__hero"
  >
    <MovieCardHead
      film={
        Object {
          "backgroundColor": "#ffffff",
          "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
          "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
          "director": "Wes Andreson",
          "genre": "Comedy",
          "id": 1,
          "isFavorite": false,
          "name": "The Grand Budapest Hotel",
          "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
          "previewImage": "img/the-grand-budapest-hotel.jpg",
          "previewVideoLink": "https://some-link",
          "rating": 8.9,
          "released": 2014,
          "runTime": 99,
          "scoresCount": 240,
          "starring": Array [
            "Bill Murray",
            "Edward Norton",
            "Jude Law",
            "Willem Dafoe",
            "Saoirse Ronan",
          ],
          "videoLink": "https://some-link",
        }
      }
    />
    <div
      className="movie-card__wrap"
    >
      <MovieCardDescr
        film={
          Object {
            "backgroundColor": "#ffffff",
            "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
            "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
            "director": "Wes Andreson",
            "genre": "Comedy",
            "id": 1,
            "isFavorite": false,
            "name": "The Grand Budapest Hotel",
            "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
            "previewImage": "img/the-grand-budapest-hotel.jpg",
            "previewVideoLink": "https://some-link",
            "rating": 8.9,
            "released": 2014,
            "runTime": 99,
            "scoresCount": 240,
            "starring": Array [
              "Bill Murray",
              "Edward Norton",
              "Jude Law",
              "Willem Dafoe",
              "Saoirse Ronan",
            ],
            "videoLink": "https://some-link",
          }
        }
      />
    </div>
  </div>
  <div
    className="movie-card__wrap movie-card__translate-top"
  >
    <div
      className="movie-card__info"
    >
      <MovieCardPoster
        classname="big"
        film={
          Object {
            "backgroundColor": "#ffffff",
            "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
            "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
            "director": "Wes Andreson",
            "genre": "Comedy",
            "id": 1,
            "isFavorite": false,
            "name": "The Grand Budapest Hotel",
            "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
            "previewImage": "img/the-grand-budapest-hotel.jpg",
            "previewVideoLink": "https://some-link",
            "rating": 8.9,
            "released": 2014,
            "runTime": 99,
            "scoresCount": 240,
            "starring": Array [
              "Bill Murray",
              "Edward Norton",
              "Jude Law",
              "Willem Dafoe",
              "Saoirse Ronan",
            ],
            "videoLink": "https://some-link",
          }
        }
      />
      <div
        className="movie-card__desc"
      >
        <nav
          className="movie-nav movie-card__nav"
        >
          <ul
            className="movie-nav__list"
          >
            <li
              className="movie-nav__item movie-nav__item--active"
            >
              <a
                aria-current="page"
                className="movie-nav__link active"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                Overview
              </a>
            </li>
            <li
              className="movie-nav__item "
            >
              <a
                aria-current="page"
                className="movie-nav__link active"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                Details
              </a>
            </li>
            <li
              className="movie-nav__item "
            >
              <a
                aria-current="page"
                className="movie-nav__link active"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                Reviews
              </a>
            </li>
          </ul>
        </nav>
        <div
          className="movie-rating"
        >
          <div
            className="movie-rating__score"
          >
            8.9
          </div>
          <p
            className="movie-rating__meta"
          >
            <span
              className="movie-rating__level"
            >
              Very good
            </span>
            <span
              className="movie-rating__count"
            >
              240
               ratings
            </span>
          </p>
        </div>
        <div
          className="movie-card__text"
        >
          <p>
            In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.
          </p>
          <p
            className="movie-card__director"
          >
            <strong>
              Director: 
              Wes Andreson
            </strong>
          </p>
          <p
            className="movie-card__starring"
          >
            <strong>
              Starring: 
              Bill Murray, Edward Norton, Jude Law, Willem Dafoe
               and other
            </strong>
          </p>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Render BigMovieCard without full content 1`] = `
<section
  className="movie-card "
>
  <MovieCardHead
    film={
      Object {
        "backgroundColor": "#ffffff",
        "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
        "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
        "director": "Wes Andreson",
        "genre": "Comedy",
        "id": 1,
        "isFavorite": false,
        "name": "The Grand Budapest Hotel",
        "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
        "previewImage": "img/the-grand-budapest-hotel.jpg",
        "previewVideoLink": "https://some-link",
        "rating": 8.9,
        "released": 2014,
        "runTime": 99,
        "scoresCount": 240,
        "starring": Array [
          "Bill Murray",
          "Edward Norton",
          "Jude Law",
          "Willem Dafoe",
          "Saoirse Ronan",
        ],
        "videoLink": "https://some-link",
      }
    }
  />
  <div
    className="movie-card__wrap"
  >
    <div
      className="movie-card__info"
    >
      <MovieCardPoster
        film={
          Object {
            "backgroundColor": "#ffffff",
            "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
            "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
            "director": "Wes Andreson",
            "genre": "Comedy",
            "id": 1,
            "isFavorite": false,
            "name": "The Grand Budapest Hotel",
            "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
            "previewImage": "img/the-grand-budapest-hotel.jpg",
            "previewVideoLink": "https://some-link",
            "rating": 8.9,
            "released": 2014,
            "runTime": 99,
            "scoresCount": 240,
            "starring": Array [
              "Bill Murray",
              "Edward Norton",
              "Jude Law",
              "Willem Dafoe",
              "Saoirse Ronan",
            ],
            "videoLink": "https://some-link",
          }
        }
      />
      <MovieCardDescr
        film={
          Object {
            "backgroundColor": "#ffffff",
            "backgroundImage": "img/the-grand-budapest-hotel-bg.jpg",
            "description": "In the 1930s, the Grand Budapest Hotel is a popular European ski resort, presided over by concierge Gustave H. (Ralph Fiennes). Zero, a junior lobby boy, becomes Gustave's friend and protege.",
            "director": "Wes Andreson",
            "genre": "Comedy",
            "id": 1,
            "isFavorite": false,
            "name": "The Grand Budapest Hotel",
            "posterImage": "img/the-grand-budapest-hotel-poster.jpg",
            "previewImage": "img/the-grand-budapest-hotel.jpg",
            "previewVideoLink": "https://some-link",
            "rating": 8.9,
            "released": 2014,
            "runTime": 99,
            "scoresCount": 240,
            "starring": Array [
              "Bill Murray",
              "Edward Norton",
              "Jude Law",
              "Willem Dafoe",
              "Saoirse Ronan",
            ],
            "videoLink": "https://some-link",
          }
        }
      />
    </div>
  </div>
</section>
`;
